<resources>
    <string name="app_name">Uber</string>
    <string name="close_button" translatable="false">close_button</string>
    <string name="registered_email">Please enter your Registered Email below:</string>
    <string name="email">Email</string>
    <string name="back" translatable="false">BACK</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="forgot_pswd_send">We have sent you instructions to reset your password on email!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="show_pswd">Show password</string>
    <string name="forgot_pswd">Forgot password?</string>
    <string name="new_user">Not a Member yet? Sign Up here.</string>
    <string name="hide_pswd">Hide Password</string>
    <string name="registration_successful">Account has been successfully created!</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="cancel_str">Cancel</string>
    <string name="logout">Logout</string>

    <!--errors-->
    <string name="login_error">Enter both credentials.</string>
    <string name="invalid_email">Your email is invalid.</string>
    <string name="enter_email_err">Please enter your email.</string>
    <string name="reset_email_err">Failed to send reset email.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="all_fields_required_err">All fields are required.</string>
    <string name="name_err">Enter your name.</string>
    <string name="surname_err">Your surname is invalid.</string>
    <string name="password_length_err">Your password should have at least 6 characters.</string>
    <string name="passwords_not_match_err">Both password does not match.</string>
    <string name="terms_err">Please select Terms and Conditions.</string>
    <string name="sth_went_wrong_err">Something went wrong with registration, check your connection.</string>
    <string name="signUp">SIGN UP</string>
    <string name="user_name">Name</string>
    <string name="user_name_colon">Name:</string>
    <string name="user_surname">Surname</string>
    <string name="surname">Surname</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="driver">Want to be a driver</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="gps_permissions">Give application GPS permissions.</string>
    <string name="gps_permission_message">Application need GPS permissions to work properly. Do you want to give app GPS permissions?</string>
    <string name="GPS_permissions_err">Please provide GPS permissions!</string>
    <string name="geofire_saving_err">"Problem with saving location to geofire"</string>
    <string name="geofire_removing_err">Couldn\'t remove location from db</string>
    <string name="title_activity_navigation_drawer" translatable="false">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="history_menu_item">History</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="change_to_customer">Change to customer?</string>
    <string name="request_uber">REQUEST UBER</string>
    <string name="pickup_marker_title">Pickup here</string>
    <string name="pickup_pending">Getting your driver&#8230;</string>
    <string name="no_location_err">Cannot get current location</string>
    <string name="no_network_err">No internet connection.</string>
    <string name="getting_driver_location">Getting driver location&#8230;</string>
    <string name="driver_coming">Driver\'s coming&#8230;</string>
    <string name="your_driver">Your driver</string>
    <string name="customer_pickup">Customer pickup</string>
    <string name="pickup_spot">Pickup spot</string>
    <string name="destination_spot">Destination spot</string>
    <string name="no_driver_nearby">Could\'t find any driver nearby.</string>
    <string name="cannot_switch_to_customer">Cannot change to customer while you have ride!</string>
    <string name="driver_toggle_btn_not_allowed">You are not a driver or does not have internet connection.</string>
    <string name="driver_arrived">Driver\'s here</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_colon">Phone number:</string>
    <string name="user_profile_image" translatable="false">user_profile_image</string>
    <string name="storage_permissions_denied">Storage permissions are needed to load selected image.</string>
    <string name="error_uploading_image">Something went wrong and image couldn\'t be uploaded.</string>
    <string name="sth_wrong_error">Something went wrong, try again.</string>
    <string name="phone_number_error">Wrong phone number.</string>
    <string name="profile">Profile</string>
    <string name="user_destination_colon">Destination:</string>
    <string name="customer_destination">Customer destination</string>
    <string name="no_specified">Not specified</string>
    <string name="pick_customer">Pick customer</string>
    <string name="finish_ride">Finish ride</string>
    <string name="no_data">No data</string>
    <string name="date">Date</string>
    <string name="id">ID</string>
    <string name="rate_driver">Rate your driver</string>
    <string name="distance">Distance:</string>
    <string name="distance_value" translatable="false">%1$dm</string>
    <string name="user_full_name_value" translatable="false">%1$s %2$s</string>


</resources>
