<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="65dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="24dp"
            android:elevation="1dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.MapActivity" />

        <RelativeLayout
            android:id="@+id/autocomplete_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/map"
            android:layout_marginBottom="?attr/actionBarSize"
            android:background="@color/ic_white_background">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_uber"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/autocomplete_fragment"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/request_uber"
                android:textColor="@color/ic_white_background"
                android:visibility="visible"
                tools:visibility="visible" />


        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickup_customer_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/map"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="?attr/actionBarSize"
            android:text="@string/pick_customer"
            android:textColor="@color/ic_white_background"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_above="@id/autocomplete_relative_layout"
            android:background="@color/ic_white_background"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/user_profile_image_map"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/user_profile_image"
                android:padding="15sp"
                android:src="@drawable/profile_image" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="1sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_destination_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:text="@string/user_destination_colon" />

                    <TextView
                        android:id="@+id/user_destination_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10sp"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:text="@string/no_specified" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_name_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="0sp"
                        android:paddingBottom="10sp"
                        android:text="@string/user_name_colon" />

                    <TextView
                        android:id="@+id/user_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10sp"
                        android:paddingTop="0sp"
                        android:paddingBottom="10sp"
                        android:text="@string/user_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="0sp"
                        android:paddingBottom="10sp"
                        android:text="@string/phone_number_colon" />

                    <TextView
                        android:id="@+id/user_phone_number_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10sp"
                        android:paddingTop="0sp"
                        android:paddingBottom="10sp"
                        android:text="@string/phone_number" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>

