<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="65dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="24dp"
            android:elevation="1dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.MapActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/request_uber"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/map"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="?attr/actionBarSize"
            android:text="@string/request_uber"
            android:textColor="@color/ic_white_background"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:id="@+id/info"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="@color/ic_white_background"
            android:layout_above="@id/request_uber">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/user_profile_image"
                android:id="@+id/user_profile_image_map"
                android:src="@drawable/profile_image"
                android:padding="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="1sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_name_map"
                        android:text="@string/user_name_colon"
                        android:paddingTop="15sp"
                        android:paddingBottom="10sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_name_value"
                        android:text="@string/user_name"
                        android:paddingTop="15sp"
                        android:paddingStart="10sp"
                        android:paddingBottom="10sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_phone_number"
                        android:text="@string/phone_number_colon"
                        android:paddingTop="20sp"
                        android:paddingBottom="15sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_phone_number_value"
                        android:text="@string/phone_number"
                        android:paddingStart="10sp"
                        android:paddingTop="20sp"
                        android:paddingBottom="15sp"/>

                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>

